2015-04-06  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_OBJS): Delete sim-engine.o.

2015-04-01  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_OBJS): Delete $(SIM_EXTRA_OBJS).

2015-03-31  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.

2015-03-28  James Bowman  <james.bowman@ftdichip.com>

	* Makefile.in: New file, FT32 sim Makefile.
	* configure.ac: New file, FT32 sim config.
	* ft32-sim.h: New file, FT32 sim CPU object.
	* interp.c: New file, FT32 simulator.
	* sim-main.h: New file, FT32 simulator wrapper.
	* aclocal.m4, config.in, configure: Regenerate.