@@ -1,3 +1,7 @@
+2015-04-12  Mike Frysinger  <vapier@gentoo.org>
+
+	* interp.c (sim_read, sim_write): Delete.
+
 2015-04-06  Mike Frysinger  <vapier@gentoo.org>
 
 	* Makefile.in (SIM_OBJS): Delete sim-engine.o.
